--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -1,17 +1,17 @@
 <div class="md-whiteframe-z4 login-form" ng-controller="LoginFormCtrl as vm" layout="column"
      layout-align="center center">
-    <md-toolbar class="md-tall md-whiteframe-z1" layout-align="center center" md-theme="indigo">
+    <md-toolbar class="md-tall md-whiteframe-z1" layout-align="center center">
         <h1>katGUI</h1>
     </md-toolbar>
-    <form flex name="form" layout="column" layout-align="center center" layout-padding>
+    <form flex name="form" layout="column" layout-align="center center" layout-padding md-theme="{{themePrimaryButtons}}">
         <md-input-container md-no-float required class="long-input">
             <input focus ng-model="vm.credentials.username" placeholder="Email">
         </md-input-container>
-        <md-input-container md-no-float required class="long-input">
+        <md-input-container  md-no-float required class="long-input">
             <input type="password" ng-model="vm.credentials.password" placeholder="Password">
         </md-input-container>
-        <md-button  style="margin: 8px;" ng-click="vm.login(vm.credentials)"
-                   class="md-raised md-primary" md-theme="blue">Login
+        <md-button style="margin: 8px;" ng-click="vm.login(vm.credentials)"
+                   class="md-raised md-primary">Login
         </md-button>
     </form>
 </div>
