--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <md-toolbar class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">katGUI</h1>
         </md-toolbar>
-        <md-content class="md-content-padding" style="margin-top: 16px;" md-theme="default">
+        <md-content class="md-content-padding" style="margin-top: 16px;">
             <md-list>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('home')">
@@ -203,7 +203,7 @@
         <md-toolbar class="md-whiteframe-z1" md-theme-watch="true">
             <h1 class="md-toolbar-tools side-nav-title">User Navigation</h1>
         </md-toolbar>
-        <md-content class="md-content-padding" style="margin-top: 16px;" md-theme="default">
+        <md-content class="md-content-padding" style="margin-top: 16px;">
             <md-list>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavRightStateGo('admin')">
