--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -3,17 +3,20 @@
      style="min-height: 100%; height: 100%; min-width: 100%; width: 100%; position: absolute;">
 
     <div class="sensor-graph-tips" layout="column" ng-show="vm.showTips">
-        <div layout="row" class="arrow-box sg-timerange-tip">
+        <div layout="row" layout-align="start center" layout="row" class="arrow-box sg-timerange-tip">
             <span>1. Set a Time Range</span>
         </div>
-        <div class="sg-findsensor-tip arrow-box">
-            <span>2. Type a sensor name search string and press enter (e.g. *wind_speed*)</span>
+        <div layout="row" layout-align="start center" class="sg-findsensor-tip arrow-box">
+            <span>2. Select the sensor type</span>
         </div>
-        <div class="sg-sensordata-tip arrow-box">
-            <span>3. Click the sensor to map its data</span>
+        <div layout="row" layout-align="start center" class="sg-findsensor-tip arrow-box">
+            <span>3. Type a sensor name search string and press enter (e.g. *wind_speed*)</span>
         </div>
-        <div class="sg-options-tip arrow-box">
-            <span>4. Set your graphing options</span>
+        <div layout="row" layout-align="start center" class="sg-sensordata-tip arrow-box">
+            <span>4. Click the sensor to map its data</span>
+        </div>
+        <div layout="row" layout-align="start center" class="sg-options-tip arrow-box">
+            <span>5. Set your graphing options</span>
         </div>
     </div>
 
@@ -33,21 +36,29 @@
                             ng-click="$event.stopPropagation()"
                             data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(newDate)"></datetimepicker>
 
+            <datetimepicker id="enddatePickerMenu" class="datepickerMenu md-whiteframe-z1"
+                            ng-init="vm.showEndDatePicker = false"
+                            style="position: absolute; left:23px; top: 80px; color: #333333;"
+                            ng-show="vm.showEndDatePicker" data-ng-model="vm.sensorEndDatetime"
+                            ng-keypress="vm.showEndDatePicker = false"
+                            vm.showDatePicker=false;"
+                            ng-click="$event.stopPropagation()"
+                            data-on-set-time="vm.showEndDatePicker = false; vm.onEndTimeSet(newDate)"></datetimepicker>
+
             <div layout="row">
                 <md-input-container md-no-float style="margin-top: 3px; padding: 0; width: 135px;">
                     <input type="text" ng-change="vm.startTimeChange()" class=""
                            ng-model="vm.sensorStartDateReadable" placeholder="Start Date"
-                           ng-class="{'input-error':vm.dateTimeError}" title="Format: 'yyyy-MM-dd HH:mm:ss'"
+                           ng-class="{'input-error':vm.dateTimeError}" title="End Date 'yyyy-MM-dd HH:mm:ss'"
                            ng-click="$event.stopPropagation()"/>
                 </md-input-container>
                 <md-button class="md-icon-button" style="margin-left: 0px; margin-top: 3px; width: 40px; height: 40px;"
-                           ng-click="vm.showDatePicker = !vm.showDatePicker; $event.stopPropagation()">
+                           ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()">
                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
                 </md-button>
-
             </div>
 
-            <div layout="row" layout="center center" style="margin-top: -10px;">
+            <div layout="row" layout="center center" style="margin-top: -10px;" ng-show="vm.showRelativeTime">
                 <md-switch ng-init="vm.plusMinus = false" class="md-primary" ng-model="vm.plusMinus"
                            style="font-size: 34px; min-width: 65px; margin-right: -10px; margin-top: 12px">
                     {{vm.plusMinus? '+' : '-'}}
@@ -67,29 +78,56 @@
                 </md-select>
             </div>
 
+            <div layout="row" layout="center center" style="margin-top: -10px;" ng-show="!vm.showRelativeTime">
+                <md-input-container md-no-float style="margin-top: 3px; padding: 0; width: 135px;">
+                    <input type="text" ng-change="vm.endTimeChange()" class=""
+                           ng-model="vm.sensorEndDateReadable" placeholder="End Date"
+                           ng-class="{'input-error':vm.endDateTimeError}" title="Start Date 'yyyy-MM-dd HH:mm:ss'"
+                           ng-click="$event.stopPropagation()"/>
+                </md-input-container>
+                <md-button class="md-icon-button" style="margin-left: 0px; margin-top: 3px; width: 40px; height: 40px;"
+                           ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()">
+                    <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
+                </md-button>
+            </div>
+
+            <div layout="row" layout-align="center center" style="margin-left: 16px; margin-right:16px; width: 130px;">
+                <!--<span style="margin-right: 8px;">Sensor Type:</span>-->
+                <md-select flex md-theme="{{themePrimaryButtons}}" ng-init="vm.sensorType = 'numeric'" ng-model="vm.sensorType"
+                    title="Sensor Type" ng-change="vm.sensorTypeChanged()">
+                    <md-option value="numeric">Numeric</md-option>
+                    <!--<md-option value="text">Text</md-option>-->
+                    <md-option value="discrete">Discrete</md-option>
+                </md-select>
+            </div>
+
+            <!--<md-input-container md-no-float class="sensor-search-input">-->
+                <!--<input type="text" ng-change="vm.validateSearchInputLength(vm.sensorRegexStr)"-->
+                       <!--placeholder="Search for sensors by regex..." ng-model="vm.sensorRegexStr"-->
+                       <!--ng-keypress="vm.findSensorDataFromRegex(vm.sensorRegexStr, $event)"-->
+                       <!--ng-class="{'input-error':vm.sensorSearchFieldLengthError}" title="Start Typing to Search"/>-->
+            <!--</md-input-container>-->
+
             <md-input-container md-no-float class="sensor-search-input">
                 <input type="text" ng-change="vm.validateSearchInputLength(vm.sensorSearchStr)"
                        placeholder="Search for sensors..." ng-model="vm.sensorSearchStr"
                        ng-keypress="vm.findSensorNames(vm.sensorSearchStr, $event)"
-                       ng-class="{'input-error':vm.sensorSearchFieldLengthError}" title="Start Typing to Search"/>
-                <!--<md-tooltip md-visible="vm.sensorSearchFieldShowTooltip" md-direction="right" md-autohide="false">-->
-                <!--Type a name and press enter-->
-                <!--</md-tooltip>-->
+                       ng-class="{'input-error':vm.sensorSearchFieldLengthError}" title="Type a sensor name expression and press enter. E.g. *wind*"/>
             </md-input-container>
-            <md-list class="sensor-search-name-list unselectable md-whiteframe-z1" ng-if="!vm.waitingForSearchResult">
-                <md-list-item ng-repeat="sensor in vm.sensorSearchNames track by $index"
+            <div class="sensor-search-name-list unselectable md-whiteframe-z1">
+                <div class="sensor-search-result-item" ng-repeat="sensor in vm.sensorSearchNames track by $index"
                               ng-click="vm.searchSensorClicked(sensor);">
                     <span>{{::sensor.name}}</span>
-                </md-list-item>
-            </md-list>
-            <div layout="row" layout-align="center center" class="sensor-search-name-list unselectable md-whiteframe-z1"
-                 ng-show="vm.waitingForSearchResult"
-                 style="background: rgba(158,158,158,0.1)">
-                <div class="spinner">
-                    <div class="double-bounce1"></div>
-                    <div class="double-bounce2"></div>
+                </div>
+                <div layout="row" layout-align="center center" class="search-loading-overlay unselectable"
+                     ng-if="vm.waitingForSearchResult">
+                    <div class="spinner">
+                        <div class="double-bounce1"></div>
+                        <div class="double-bounce2"></div>
+                    </div>
                 </div>
             </div>
+
             <div style="width: 100%; margin-top: 4px;" layout="row" layout-align="center center">
                 <span ng-show="vm.sensorSearchNames.length === 1000" title="Refine the search to see more sensors"
                       class="fa fa-warning"></span>
@@ -99,8 +137,17 @@
             </div>
 
             <div layout="column" style="width: 100%;">
+                <md-checkbox class="md-primary" ng-model="vm.showRelativeTime">
+                    Show Relative Date-Time Picker
+                </md-checkbox>
+                <md-checkbox class="md-primary" ng-model="vm.showDots">
+                    Show Dots
+                </md-checkbox>
                 <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showGridLinesChanged()">
                     Show Grid Lines
+                </md-checkbox>
+                <md-checkbox class="md-primary" ng-model="vm.showTips">
+                    Show Sensor Graph Tips
                 </md-checkbox>
             </div>
         </div>
@@ -111,25 +158,20 @@
             <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
                  class="md-toolbar-tools-medium">
                 <md-chips flex class="custom-chips" ng-model="vm.sensorNames" readonly="true">
-                    <md-chip-template>
-                        <span>
+                    <md-chip-template ng-mouseenter="vm.setLineStrokeWidth($chip.name)"
+                                      ng-mouseleave="vm.removeLineStrokeWidth($chip.name)">
+                        <span class="{{$chip.name}}">
                           <strong>{{$chip.name}}</strong>
                         </span>
                     </md-chip-template>
                     <button md-chip-remove ng-click="vm.chipRemovePressed($chip)" class="md-primary sensor-name-chip">
-                        <md-icon md-svg-icon="close"></md-icon>
+                        <md-icon md-font-icon="fa-close" class="fa"></md-icon>
                     </button>
                 </md-chips>
-                <!--<md-button class="md-icon-button md-primary md-raised"-->
-                <!--style="height: 100%; width: 36px; margin-left: 8px; font-size: 18px;"-->
-                <!--ng-disabled="vm.dateTimeError"-->
-                <!--md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensorData()">-->
-                <!--<md-icon md-font-icon="fa-search-plus" class="fa"></md-icon>-->
-                <!--</md-button>-->
             </div>
         </md-toolbar>
         <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart"
-                          clear-function="vm.clearChart"
+                          clear-function="vm.clearChart" ng-class="{'dot-hide':!vm.showDots}"
                           remove-sensor-function="vm.removeSensorLine"></multi-line-chart>
         <div layout="row" class="floating-chart-actions">
             <md-button class="md-icon-button"
