--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -2,7 +2,7 @@
 
     <div flex layout="column" style="overflow: auto; padding-left: 8px; padding-right: 16px;">
         <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="md-whiteframe-z2 subarray-container animate-repeat" layout="row" layout-align="start"
-             md-theme="{{subarray.state === 'free'? 'green' : subarray.state === 'in_use'? 'amber' : 'deep-purple'}}" flex>
+             md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'deep-purple'}}" flex>
 
             <div layout="column" flex>
                 <md-toolbar class="md-whiteframe-z1 md-hue-2" style="max-height: 64px;min-height: 64px;">
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <md-button md-theme="{{themeButtonsPrimary}}" class="md-primary md-raised"
+            <md-button md-theme="{{themePrimaryButtons}}" class="md-primary md-raised"
                        style="min-height: 100%; max-width: 31px; min-width: 31px; margin-left: 4px;"
                        ng-click="vm.assignSelectedScheduleBlocks(subarray);" title="Assign Schedule Blocks to Sub-Array">
                 <span class="fa fa-chevron-left md-fab-fa-icon-small"></span>
@@ -96,7 +96,7 @@
         <div class="md-whiteframe-z2" layout="column" flex>
             <md-toolbar class="panel-toolbar-small md-whiteframe-z1" ng-mouseenter="showDraftTools = true;" ng-mouseleave="showDraftTools = false;">
                 <div layout="row" class="unselectable md-toolbar-tools">
-                    <span flex>Draft Schedule Blocks</span>
+                    <span flex>Drafts</span>
                     <input class="fade-in search-input-box" ng-show="showDraftTools || vm.q" type="search"
                            ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
                 </div>
