--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -56,21 +56,26 @@
                             {{::item.id_code}}</span>
                         <i>{{::item.owner}}</i>
                     </div>
-                    <input ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
+                    <input ng-if="item.editing" ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
                             class="schedule-item-description-input" style="height: 27px;"
                            ng-model="item.description" placeholder="Description"/>
+                    <span ng-if="!item.editing" flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
 
-                    <md-select ng-model="item.type"  style="width: 134px; margin-left: 4px; margin-right:4px;"
+                    <md-select ng-if="item.editing" ng-model="item.type"  style="width: 126px; margin-left: 4px; margin-right:4px; margin-top: -1px;"
                                ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                class="md-primary" ng-click="item.isDirty = true; vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();">
                         <md-option ng-value="type" ng-repeat="type in vm.types">{{type}}</md-option>
                     </md-select>
-                    <input ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text"  title="UTC"
+                    <span ng-if="!item.editing" style="width: 134px; margin-left: 4px; margin-right:4px;"
+                          ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">
+                        {{item.type}}</span>
+                    <input ng-if="item.editing" ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text"  title="UTC"
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
-                    <span class="sb-row-button" ng-show="!item.isDirty"></span>
+                    <span  ng-if="!item.editing" style="width: 140px;">{{item.desired_start_time}}</span>
+                    <span class="sb-row-button" ng-show="!item.editing"></span>
                     <span ng-if="item.pendingVerify" class="sb-row-button"></span>
-                    <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty" style="transition: 0s;"  class="sb-row-button"
+                    <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty || item.editing" style="transition: 0s;"  class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check"></span>
                     </button>
@@ -106,6 +111,10 @@
 
     <div id="schedulerEditMenu" ng-show="vm.showEditMenu" class="datepickerMenu md-whiteframe-z1">
         <md-list layout="column">
+            <md-item>
+                <md-button role="menuitem" style="width: 170px; font-size:14px; height: 38px; padding: 2px;"
+                           ng-click="vm.editCurrentItem()">Edit</md-button>
+            </md-item>
             <md-item ng-if="vm.selectedScheduleDraft.type == 'OBSERVATION'">
                 <md-button role="menuitem" style="width: 170px; font-size:
                 14px; height: 38px; padding: 2px;" ng-disabled="!vm.selectedScheduleDraft.sub_nr" title="{{!vm.selectedScheduleDraft.sub_nr ? 'Assign to a Sub-Array before verifying.' : ''}}"
