wip - more work on scheduler for subarray_n

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -33,7 +33,7 @@
                     </md-button>
                     <md-button ng-show="subarray.state === 'inactive'" class="md-icon-button inline-action-button" ng-click="vm.activateSubarray(subarray)"
                                title="Activate Sub-Array">
-                        <md-icon class="fa" md-font-icon="fa-check"></md-icon>
+                        <md-icon class="fa" md-font-icon="fa-power-off"></md-icon>
                     </md-button>
                 </md-toolbar>
 
