--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </md-item>
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-graph')">
-                        <span class="fa fa-area-chart"></span>
+                        <span class="fa fa-line-chart"></span>
                         <button>Sensor Graphs</button>
                     </md-item-content>
                 </md-item>
