--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -6,8 +6,16 @@
                  ng-class="{'md-whiteframe-z1': !vm.selectedSchedule, 'whiteframe-z1-left': vm.selectedSchedule}">
                 <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1" ng-mouseenter="showTools = true;" ng-mouseleave="showTools = false;"
                     layout="row" layout-align="start center">
-                        <span style="margin-left: 8px;">Sub-Array {{vm.subarray_id}}</span>
+                        <span style="margin-left: 8px;">SUB-ARRAY {{vm.subarray_id}}</span>
+                        <span ng-show="vm.subarrayState" style="margin-left: 4px;"> - {{vm.subarrayState}}</span>
                         <span flex></span>
+                        <md-button class="md-icon-button inline-action-button" ng-click="vm.freeSubarray()" title="Free Subarray">
+                            <md-icon class="fa" md-font-icon="fa-recycle"></md-icon>
+                        </md-button>
+                        <md-button ng-show="vm.subarrayState === 'INACTIVE'" class="md-icon-button inline-action-button" ng-click="vm.activateSubarray()"
+                                   title="Activate Sub-Array">
+                            <md-icon class="fa" md-font-icon="fa-power-off"></md-icon>
+                        </md-button>
                         <span>Mode:</span>
                         <md-select ng-model="vm.selectedMode" style="margin-left: 4px; margin-right:8px; margin-top: -8px;" ng-change="vm.schedulerModeChanged()"
                                    class="md-primary" md-theme="{{themePrimaryButtons}}">
