refactoring to use new sensors server endpoint

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <script src="app/services/config-service.js"></script>
 <script src="app/services/data-service.js"></script>
 <script src="app/services/monitor-service.js"></script>
+<script src="app/services/sensors-service.js"></script>
 <script src="app/services/observation-schedule-service.js"></script>
 <script src="app/services/receptor-state-service.js"></script>
 <script src="app/services/user-service.js"></script>
