--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -5,19 +5,16 @@
              style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false" flex>
 
             <div layout="column" layout-align="start" flex>
-                <md-toolbar md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'purple'}}" class="md-whiteframe-z1 md-hue-2"
+                    <md-toolbar md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'purple'}}" class="md-whiteframe-z1 md-hue-2"
                             layout="row" layout-align="center center" title="{{subarray.description}}" style="max-height: 50px; min-height: 50px;">
-                    <div flex layout="column">
-                        <md-button layout="row" style="min-height: 42px;" class="unselectable md-toolbar-tools-small" ng-click="vm.navigateToSchedulerDetails(subarray.id)">
-                            <span>Sub-Array {{subarray.id}}</span>
-                            <md-toolbar flex ng-click="vm.navigateToSchedulerDetails(subarray.id)" layout="row" layout-align="center center"
-                                         class="subarray-state-toolbar transparent-background"
-                                        title="Click to Manage Observations for Sub-Array {{subarray.id}}">
-                                <span>{{subarray.state + " "}}</span>
-                                <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
-                            </md-toolbar>
+                    <div flex style="position: relative">
+                        <span style="position: absolute; left: 8px; top: 8px;">SUB-ARRAY {{subarray.id}}</span>
+                        <md-button layout="row" style="min-height: 42px; width: 100%" class="unselectable" ng-click="vm.navigateToSchedulerDetails(subarray.id)"
+                                   title="Click to Manage Observations for Sub-Array {{subarray.id}}">
+                            <span>{{subarray.state}}</span>
+                            <span ng-if="subarray.in_maintenance">{{", in maintenance"}}</span>
                         </md-button>
-                        <div style="margin-top: -16px;">
+                        <div style="left: 0; bottom: 0; position: absolute">
                             <span style="font-size: 10px; margin-right: 2px;" title="Resources in Maintenance">Maint.</span>
                             <span style="font-size: 10px;" title="Resources Marked as Faulty">Faulty</span>
                         </div>
