--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -5,16 +5,17 @@
     </md-toolbar>
 
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')" >Alarms</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')" >Health and State</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')" >Receptor Status</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')" >Operator Control</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" >Scheduler</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')" >Sensor Graphs</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')" >Weather</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')">Sensor Graphs</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-list')">Sensor list</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')" >User Administration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')" >KATGUI Configuration</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')">KATGUI Configuration</md-button>
     </div>
 </div>
