wip - sensor list, changed resource and sensor separator to a '.' from a ':'

--- a/app/health/custom-health/custom-health.html
+++ b/app/health/custom-health/custom-health.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div layout="row" md-theme="{{themePrimaryButtons}}">
-        <input type="text" style="width: 600px;" ng-model="vm.regex" placeholder="Enter Regex" ng-init="vm.regex = 'anc:bms_kapb_*'"/>
+        <input type="text" style="width: 600px;" ng-model="vm.regex" placeholder="Enter Regex" ng-init="vm.regex = 'anc.bms_kapb_*'"/>
         <md-button id="btnBuildView" ng-click="vm.buildView(vm.regex)"  class="md-primary md-raised" style="font-size: 14px; margin-left: 8px;">Build View</md-button>
     </div>
     <div flex layout="row" style="margin-top: 4px;">
