--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -13,27 +13,67 @@
             </div>
         </div>
         <div class="resource-sensors-list md-whiteframe-z1" flex>
-            <md-toolbar layout="row" layout-align="start center">
-                <span flex style="margin-left: 16px;">Sensors</span>
-                <input class="fade-in search-input-box" type="search"
-                       ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Sensors..."/>
+            <md-toolbar style="position: relative">
+                <div layout="row" layout-align="start center" style="margin-left: 16px; margin-top: 16px">
+                    <span flex>Sensors</span>
+                    <input class="fade-in search-input-box" type="search"
+                           ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Sensors..."/>
+                </div>
+
+                <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center" style="padding-left: 8px;">
+                    <span class="subheader-text resource-sensor-name"
+                          ng-click="vm.setDraftsOrderBy('name')">
+                        <span>Name</span>
+                        <span class="fa"
+                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
+                              style="margin-right: 4px;"></span>
+                    </span>
+                    <span class="subheader-text resource-sensor-status-item" ng-click="vm.setDraftsOrderBy('description')">
+                        <span>Status</span>
+                        <span class="fa"
+                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
+                              style="margin-right: 4px;"></span>
+                    </span>
+                    <span class="subheader-text resource-sensor-time-item"
+                          ng-click="vm.setDraftsOrderBy('type')">
+                        <span>Timestamp</span>
+                        <span class="fa"
+                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
+                              style="margin-right: 4px;"></span>
+                    </span>
+                    <span class="subheader-text resource-sensor-time-item"
+                          ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                        <span >Received Timestamp</span>
+                        <span class="fa"
+                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
+                              style="margin-right: 4px;"></span>
+                    </span>
+                    <span flex class="subheader-text"
+                          ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                        <span>Value</span>
+                        <span class="fa"
+                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
+                              style="margin-right: 4px;"></span>
+                    </span>
+                </div>
             </md-toolbar>
             <div flex style="padding: 8px;">
                 <div ng-repeat="sensor in vm.sensorsToDisplay | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:'name' | limitTo:vm.limitTo track by $index"
-                     ng-show="vm.sensorLoaded($index)" title="{{sensor.description}}" class="resource-sensor-item" layout="row"
-                     ng-click="vm.plotLiveSensorFeed(sensor); sensor.selectedForChart = !sensor.selectedForChart;"
+                     ng-show="vm.sensorLoaded($index)" title="{{sensor.description}}" class="resource-sensor-item" layout="row" class="unselectable"
+                     ng-click="vm.plotLiveSensorFeed(sensor, sensor.selectedForChart); sensor.selectedForChart = !sensor.selectedForChart;"
                      ng-class="{'selected-for-chart-row': sensor.selectedForChart}">
                     <span class="resource-sensor-name">{{sensor.name}}</span>
                     <span class="resource-sensor-status-item" ng-show="sensor.sensorValue"
                         ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>
-                    <span class="resource-sensor-time-item" ng-show="sensor.sensorValue">{{sensor.timestamp | utcDateFromUnix}}</span>
+                    <span class="resource-sensor-time-item" ng-show="sensor.sensorValue">{{sensor.timestamp}}</span>
+                    <span class="resource-sensor-time-item" ng-show="sensor.sensorValue">{{sensor.received_timestamp}}</span>
                     <span flex class="resource-sensor-value-item" ng-show="sensor.sensorValue">{{sensor.value}}</span>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="md-whiteframe-z4 sensor-list-chart-container" layout="column" inherit-body-bg target-color-inherit="md-content" ng-init="vm.showChart = true"
+    <div class="md-whiteframe-z5 sensor-list-chart-container" layout="column" inherit-body-bg target-color-inherit="md-content" ng-init="vm.showChart = true"
         ng-class="{'small-hidden-sensor-graph-container': !vm.showChart}">
         <md-toolbar class="md-whiteframe-z1" layout="row" layout-align="center center">
             <span draggable=".sensor-list-chart-container" flex style="margin-left: 8px; cursor: move;">Sensor Graph</span>
@@ -47,7 +87,16 @@
                 <md-icon ng-show="!vm.showChart" class="fa" md-font-icon="fa-chevron-up"></md-icon>
             </md-button>
         </md-toolbar>
-
+        <md-chips flex class="custom-chips" ng-model="vm.sensorsPlotNames" readonly="true">
+            <md-chip-template title="{{$chip.name}}">
+                <span class="{{$chip.class}}" style="font-size: 10px;">
+                  <strong>{{$chip.name}}</strong>
+                </span>
+            </md-chip-template>
+            <button md-chip-remove ng-click="vm.chipRemovePressed($chip)" class="md-primary sensor-name-chip">
+                <md-icon md-font-icon="fa-close" class="fa"></md-icon>
+            </button>
+        </md-chips>
         <multi-line-chart ng-show="vm.showChart" flex redraw-function="vm.redrawChart" hide-context-zoom="true"
                           clear-function="vm.clearChart" class="dot-hide sensor-list-multi-line-chart"
                           remove-sensor-function="vm.removeSensorLine"></multi-line-chart>
