--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -22,43 +22,43 @@
 
                 <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center" style="padding-left: 8px;">
                     <span class="subheader-text resource-sensor-name"
-                          ng-click="vm.setDraftsOrderBy('name')">
+                          ng-click="vm.setSensorsOrderBy('name')">
                         <span>Name</span>
                         <span class="fa"
-                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
+                              ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'name' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'name' && vm.sensorsOrderBy.reverse}"
                               style="margin-right: 4px;"></span>
                     </span>
-                    <span class="subheader-text resource-sensor-status-item" ng-click="vm.setDraftsOrderBy('description')">
+                    <span class="subheader-text resource-sensor-status-item" ng-click="vm.setSensorsOrderBy('status')">
                         <span>Status</span>
                         <span class="fa"
-                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
+                              ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'status' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'status' && vm.sensorsOrderBy.reverse}"
                               style="margin-right: 4px;"></span>
                     </span>
                     <span class="subheader-text resource-sensor-time-item"
-                          ng-click="vm.setDraftsOrderBy('type')">
+                          ng-click="vm.setSensorsOrderBy('timestamp')">
                         <span>Timestamp</span>
                         <span class="fa"
-                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
+                              ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'timestamp' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'timestamp' && vm.sensorsOrderBy.reverse}"
                               style="margin-right: 4px;"></span>
                     </span>
                     <span class="subheader-text resource-sensor-time-item"
-                          ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                          ng-click="vm.setSensorsOrderBy('received_timestamp')">
                         <span >Received Timestamp</span>
                         <span class="fa"
-                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
+                              ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'received_timestamp' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'received_timestamp' && vm.sensorsOrderBy.reverse}"
                               style="margin-right: 4px;"></span>
                     </span>
                     <span flex class="subheader-text"
-                          ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                          ng-click="vm.setSensorsOrderBy('value')">
                         <span>Value</span>
                         <span class="fa"
-                              ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
+                              ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'value' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'value' && vm.sensorsOrderBy.reverse}"
                               style="margin-right: 4px;"></span>
                     </span>
                 </div>
             </md-toolbar>
             <div flex style="padding: 8px;">
-                <div ng-repeat="sensor in vm.sensorsToDisplay | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:'name' | limitTo:vm.limitTo track by $index"
+                <div ng-repeat="sensor in vm.sensorsToDisplay | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse | limitTo:vm.limitTo track by $index"
                      ng-show="vm.sensorLoaded($index)" title="{{sensor.description}}" class="resource-sensor-item" layout="row" class="unselectable"
                      ng-click="vm.plotLiveSensorFeed(sensor, sensor.selectedForChart); sensor.selectedForChart = !sensor.selectedForChart;"
                      ng-class="{'selected-for-chart-row': sensor.selectedForChart}">
