added date and day of year to main toolbar

--- a/app/config/config.html
+++ b/app/config/config.html
@@ -45,7 +45,7 @@
             <div class="config-div-item" style="border: 0">
                 <md-subheader>Sensor List</md-subheader>
                 <div layout="row" layout-align="start center" style="width: 400px;">
-                    <label style="text-align: end; width: 190px; font-weight: normal">Sensor Strategy Type:</label>
+                    <label style="text-align: end; width: 155px; font-weight: normal">Sensor Strategy Type:</label>
                     <md-select style="margin-left: 16px;" class="config-md-select" ng-model="$root.sensorListStrategyType"
                                ng-change="vm.saveToLocalStorage('sensorListStrategyType', $root.sensorListStrategyType)">
                         <md-option value="period">Period</md-option>
@@ -53,8 +53,8 @@
                         <md-option value="event-rate">Event-Rate</md-option>
                     </md-select>
                 </div>
-                <div layout="row" layout-align="start center" style="width: 400px;; height: 42px">
-                    <label style="text-align: end; width: 190px; font-weight: normal">Sensor Strategy Interval:</label>
+                <div layout="row" layout-align="start center" style="width: 400px; height: 42px">
+                    <label style="text-align: end; width: 155px; font-weight: normal">Sensor Strategy Interval:</label>
                     <md-input-container md-no-float style="margin-left: 16px;text-align: start; padding: 0px;"
                                         class="md-primary"
                                         title="Between 1 and 10000 seconds">
