sensor graph fills display correctly

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,5 +1,5 @@
 <div layout="row" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}"
-     ng-click="vm.showDatePicker = false;" flex style="position: absolute; min-width: 100%">
+     ng-click="vm.showDatePicker = false;" flex style="position: absolute; min-width: 100%;min-height:100%">
 
     <div class="sensor-graph-tips" layout="column" ng-show="vm.showTips">
         <div layout="row" layout-align="start center" layout="row" class="arrow-box sg-timerange-tip">
