--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,5 +1,5 @@
 <div layout="row" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}"
-     ng-click="vm.showDatePicker = false;" flex style="position: absolute; min-width: 100%;min-height:100%">
+      flex style="position: absolute; min-width: 100%;min-height:100%">
 
     <div class="sensor-graph-tips" layout="column" ng-show="vm.showTips">
         <div layout="row" layout-align="start center" layout="row" class="arrow-box sg-timerange-tip">
@@ -14,14 +14,19 @@
         <div layout="row" layout-align="start center" class="sg-sensordata-tip arrow-box">
             <span>4. Click the sensor to map its data</span>
         </div>
-        <div layout="row" layout-align="start center" class="sg-options-tip arrow-box">
-            <span>5. Set your graphing options</span>
-        </div>
+        <!--<div layout="row" layout-align="start center" class="sg-options-tip arrow-box">-->
+            <!--<span>5. Set your graphing options</span>-->
+        <!--</div>-->
     </div>
 
-    <div layout="column" style="margin: 8px; min-width: 366px;">
+    <div layout="column" style="margin: 8px; min-width: 366px;"
+         ng-click="vm.showDatePicker = false;vm.showEndDatePicker = false; vm.showSensorGraphOptionsMenu = false;vm.showSensorGraphSelectionsMenu = false;">
         <md-toolbar layout="row" class="md-whiteframe-z1 md-toolbar-tools-medium">
-            Sensor Graph Tools
+            <span flex>Sensor Graph Tools</span>
+            <md-button class="md-icon-button inline-action-button" style="margin: 0"
+                       ng-click="vm.showSensorGraphSelectionsMenu = !vm.showSensorGraphSelectionsMenu;$event.stopPropagation()">
+                <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+            </md-button>
         </md-toolbar>
         <div flex class="md-whiteframe-z1" layout="column" layout-align="start center"
              md-theme="{{themePrimaryButtons}}">
@@ -136,31 +141,14 @@
             </div>
 
             <div layout="column" style="width: 100%;">
-                <md-checkbox class="md-primary" ng-model="vm.showRelativeTime">
-                    Show Relative Date-Time Picker
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.showDots">
-                    Show Dots
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showGridLinesChanged()">
-                    Show Grid Lines
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.showTips">
-                    Show Sensor Graph Tips
-                </md-checkbox>
-                <md-checkbox class="md-primary" ng-model="vm.liveData">
+                <md-checkbox class="md-primary" ng-model="vm.liveData" ng-change="vm.liveDataChanged()">
                     Include Live Data
                 </md-checkbox>
-                <!--<md-button class="md-primary md-raised" md-theme="{{themePrimaryButtons}}"-->
-                           <!--ng-disabled="vm.sensorNames.length === 0"-->
-                           <!--ng-click="vm.connectLiveFeed()">-->
-                    <!--Connect Live Data Feed-->
-                <!--</md-button>-->
             </div>
         </div>
     </div>
 
-    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px; width:100%">
+    <div flex layout="column" class="md-whiteframe-z1" style="margin: 8px; width:100%" ng-click="vm.showSensorGraphOptionsMenu = false;vm.showSensorGraphSelectionsMenu = false;">
         <md-toolbar layout="row" layout-align="end center" class="md-whiteframe-z1 ">
             <div flex layout="row" layout-align="center center" md-theme="{{themePrimaryButtons}}"
                  class="md-toolbar-tools-medium">
@@ -179,7 +167,7 @@
         </md-toolbar>
         <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart"
                           clear-function="vm.clearChart" ng-class="{'dot-hide':!vm.showDots}"
-                          remove-sensor-function="vm.removeSensorLine"></multi-line-chart>
+                          remove-sensor-function="vm.removeSensorLine" y-max="vm.yAxisMaxValue" y-min="vm.yAxisMinValue"></multi-line-chart>
         <div layout="row" class="floating-chart-actions">
             <!--<md-button class="md-icon-button"-->
                        <!--ng-click="vm.showHelp($event)">-->
@@ -189,11 +177,56 @@
                        ng-click="vm.clearData()" title="Clear Data">
                 <md-icon class="fa" md-font-icon="fa-remove"></md-icon>
             </md-button>
-            <md-button class="md-icon-button"
-                       ng-click="alert('not implemented')" title="Additional Actions">
+            <md-button class="md-icon-button" title="Sensor Graph Actions"
+                       ng-click="vm.showSensorGraphOptionsMenu = !vm.showSensorGraphOptionsMenu;$event.stopPropagation()">
                 <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
             </md-button>
         </div>
 
+    </div>
+
+    <div ng-init="vm.showSensorGraphOptionsMenu = false" ng-show="vm.showSensorGraphOptionsMenu" class="sensor-graph-options-menu md-whiteframe-z3">
+        <md-list layout="column" md-theme="{{themePrimaryButtons}}">
+            <md-item>
+                <md-checkbox class="md-primary" ng-model="vm.showDots" ng-change="vm.showOptionsChanged()">
+                    Show Data Dots
+                </md-checkbox>
+                <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()">
+                    Show Grid Lines
+                </md-checkbox>
+                <md-checkbox class="md-primary" ng-model="vm.showContextZoom" ng-change="vm.showOptionsChanged()">
+                    Show Context Zoom
+                </md-checkbox>
+                <md-checkbox class="md-primary" ng-model="vm.useFixedYAxis" ng-change="vm.showOptionsChanged()">
+                    Use Fixed Y Axis Values
+                </md-checkbox>
+                <div ng-show="vm.useFixedYAxis" layout="row" layout-align="start center" style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                    <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
+                    <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                    class="md-primary" title="Set the desired Y-Axis Minimum Value">
+                    <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                           ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
+                    </md-input-container>
+                </div>
+                <div ng-show="vm.useFixedYAxis" layout="row" layout-align="start center" style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                    <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
+                    <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                        class="md-primary" title="Set the desired Y-Axis Maximum Value">
+                        <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                               ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
+                    </md-input-container>
+                </div>
+            </md-item>
+        </md-list>
+    </div>
+
+    <div ng-init="vm.showSensorGraphSelectionsMenu = false" ng-show="vm.showSensorGraphSelectionsMenu" class="sensor-graph-selection-options-menu md-whiteframe-z3">
+        <md-list layout="column" md-theme="{{themePrimaryButtons}}">
+            <md-item>
+                <md-checkbox class="md-primary" ng-model="vm.showRelativeTime">
+                    Show Relative Date-Time Picker
+                </md-checkbox>
+            </md-item>
+        </md-list>
     </div>
 </div>
